# orchid-skills-commons

./: .gitignore  AGENTS.md  CHANGELOG.md  COMMONS_CROSS_REPO_IMPLEMENTATION_PLAN.md  README.md  docker-compose.minio.yml  orchid-matrix-bot  playground-infrastructure  pyproject.toml  qodana.yaml
.github/workflows/: aqua-security.yml  ci.yml  codeql.yml  qodana-code-quality.yml  qodana_code_quality.yml
docs/: auditoria-codigo-2026-02-10.md  auditoria-codigo-2026-02-11.md  auditoria-tecnica-exhaustiva-2026-02-11.md  cierre-v1-checklist.md  commons-first-python-quality-standard.md  integration-playbook-romy-youtube.md  integration-tests.md  k8s-sealed-secrets.md  logging-compat-migration.md  logging-fields.md  prometheus-metrics.md  romy-sqlite-to-postgres.md  youtube-mcp-extraction-map.md
examples/infrastructure/: README.md  docker-compose.yml
examples/observability/: README.md  docker-compose.yml
examples/observability/demo_app/: Dockerfile  app.py
examples/observability/grafana/dashboards/: orchid-commons-overview.json
examples/observability/grafana/provisioning/dashboards/: dashboards.yml
examples/observability/http/: aiohttp_app.py  fastapi_app.py
examples/observability/otel-collector/: config.yaml
examples/observability/prometheus/: prometheus.yml
examples/quality/python-service-template/: README.md  pyproject.toml
examples/quality/python-service-template/config/: appsettings.development.json  appsettings.json  appsettings.production.json
src/orchid_commons/: __init__.py  errors.py  health.py  manager.py  metrics.py
src/orchid_commons/blob/: __init__.py  minio.py  r2.py  router.py  s3.py
src/orchid_commons/config/: __init__.py  errors.py  loader.py  models.py  placeholders.py  resources.py
src/orchid_commons/db/: __init__.py  _sql_utils.py  document.py  mongodb.py  postgres.py  qdrant.py  rabbitmq.py  redis.py  sqlite.py  vector.py
src/orchid_commons/observability/: __init__.py  _observable.py  http.py  langfuse.py  logging.py  metrics.py  observable.py  otel.py
src/orchid_commons/runtime/: __init__.py  manager.py
src/orchid_commons/sql/: __init__.py  postgres.py  sqlite.py
tests/: conftest.py  test_blob.py  test_blob_r2.py  test_document.py  test_langfuse.py  test_logging.py  test_manager.py  test_metrics.py  test_minio_profile.py  test_observability_http.py  test_observability_otel.py  test_postgres.py  test_qdrant.py  test_redis.py  test_settings.py  test_sqlite.py
tests/fixtures/config/: appsettings.development.json  appsettings.json  appsettings.production.json  appsettings.staging.json
tests/integration/: conftest.py  run_e2e.py  test_e2e_all_modules.py  test_minio_integration.py  test_multi_bucket_integration.py  test_observability_integration.py  test_postgres_integration.py  test_sqlite_integration.py
tests/integration/connectors/: test_mongodb_integration.py  test_multi_bucket_integration.py  test_postgres_integration.py  test_qdrant_integration.py  test_rabbitmq_integration.py  test_redis_integration.py  test_sqlite_integration.py
tests/integration/e2e/: test_e2e_all_modules.py
tests/integration/observability/: test_observability_integration.py
tests/unit/: test_blob_r2.py  test_config_loader.py  test_exception_hierarchy.py  test_langfuse.py  test_logging.py  test_manager.py  test_metrics.py  test_minio_profile.py  test_mongodb.py  test_multi_bucket_router.py  test_postgres.py  test_qdrant.py  test_redis.py  test_settings.py  test_sqlite.py
tests/unit/config/: test_config_loader.py  test_placeholders.py  test_settings.py
tests/unit/core/: test_document.py  test_exception_hierarchy.py  test_health.py  test_http_errors.py  test_manager.py
tests/unit/observability/: test_langfuse.py  test_logging.py  test_metrics.py  test_observability_otel.py  test_observable_mixin.py
tests/unit/storage/: test_blob.py  test_minio_profile.py  test_mongodb.py  test_multi_bucket_router.py  test_postgres.py  test_qdrant.py  test_rabbitmq.py  test_sqlite.py
