[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "orchid-skills-commons"
version = "0.1.0"
description = "Shared resource connections for Orchid ecosystem services and MCPs"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Orchid" }]
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.0",
]

[project.optional-dependencies]
db = [
  "aiosqlite>=0.20.0",
  "asyncpg>=0.29.0",
  "redis>=5.0.0",
  "motor>=3.6.0",
  "aio-pika>=9.4.0",
  "qdrant-client>=1.9.0",
  "pgvector>=0.3.0",
]
sqlite = [
  "aiosqlite>=0.20.0",
]
sql = [
  "asyncpg>=0.29.0",
]
redis = [
  "redis>=5.0.0",
]
mongodb = [
  "motor>=3.6.0",
]
rabbitmq = [
  "aio-pika>=9.4.0",
]
qdrant = [
  "qdrant-client>=1.9.0",
]
pgvector = [
  "pgvector>=0.3.0",
  "asyncpg>=0.29.0",
]
postgres = [
  "asyncpg>=0.29.0",
]
blob = [
  "minio>=7.2.0",
]
http = [
  "starlette>=0.27.0",
  "aiohttp>=3.9.0",
]
observability = [
  "prometheus-client>=0.20.0",
  "opentelemetry-api>=1.25.0",
  "opentelemetry-sdk>=1.25.0",
  "opentelemetry-exporter-otlp>=1.25.0",
  "langfuse>=3.0.0",
]
all = [
  "orchid-skills-commons[db,blob,http,observability]",
]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "testcontainers[postgres]>=4.8.2",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "pip-audit>=2.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/orchid_commons"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: tests that require external services (Docker, databases, MinIO)",
]

[tool.mypy]
mypy_path = "src"
packages = ["orchid_commons"]
strict = false

[[tool.mypy.overrides]]
module = [
  "redis",
  "redis.*",
  "aio_pika",
  "aio_pika.*",
  "motor",
  "motor.*",
  "qdrant_client",
  "qdrant_client.*",
  "aiohttp",
  "aiohttp.*",
  "asyncpg",
  "asyncpg.*",
  "pgvector",
  "pgvector.*",
  "minio",
  "minio.*",
  "prometheus_client",
  "prometheus_client.*",
  "opentelemetry",
  "opentelemetry.*",
  "langfuse",
  "langfuse.*",
  "starlette",
  "starlette.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["E501"]
